<resources>
    <string name="app_name">Scheduler app</string>
    <string name="manage_events">Manage events</string>
    <string name="already_a_member_click_the_sign_in_button_to_login">Already a member? click the sign in button to login</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in  now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Sen</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="church_prompt">Select church</string>
    <string-array name="church_arrays">
        <item>Kimathi</item>
        <item>kahawa</item>
        <item>Chaka</item>

    </string-array>
    <string name="celebrant_prompt">Select church</string>
    <string-array name="celebrant_arrays">
        <item>FR JOSEPH</item>
        <item>FR PETER</item>
        <item>FR JOHN</item>
    </string-array>
    <string name="group_prompt">Select Baptism group</string>
    <string-array name="Group_arrays">
        <item>Catechuments</item>
        <item>Babies</item>
    </string-array>
    <string name="event_prompt">Select church</string>
    <string-array name="event_arrays">
        <item>Wedding</item>
        <item>Report funeral</item>
        <item>Confessions</item>
        <item>Mass</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>

