<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adventures.LoginActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="331dp"
            android:layout_height="168dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/jesus" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black" />
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black" />
        <!-- Login Button -->

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@android:color/holo_purple"
        android:text="@string/btn_login"
        android:textColor="@android:color/black" />
        <Button
            android:id="@+id/btn_Admin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@android:color/holo_purple"
            android:layout_below="@+id/btn_login"
            android:text="Admin"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/btn_Priest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@android:color/holo_purple"
            android:layout_below="@+id/btn_Admin"
            android:text="Priest"
            android:textColor="@android:color/black" />
<!--        <Button-->
<!--            android:id="@+id/btn_Email"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dip"-->
<!--            android:background="@android:color/holo_purple"-->
<!--            android:layout_below="@+id/btn_Priest"-->
<!--            android:text="Email"-->
<!--            android:visibility="gone"-->
<!--            android:textColor="@android:color/black" />-->


<!--    <Button-->
<!--        android:id="@+id/btn_signup"-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dip"-->
<!--        android:background="@null"-->
<!--        android:text="not registered? signup"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="@color/colorAccent" />-->
        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />
        <Button
            android:id="@+id/btn_contactAdmin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="Not registered? contact Admin"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

    <!-- Link to Login Screen -->

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</RelativeLayout>
</ScrollView>
